cluster/static-endpoint-ingress/octoprint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: octoprint
  namespace: static-endpoint-ingress
subsets: 
  - addresses:
      - ip: "10.1.1.158" 
    ports:
      - port: 5000 
        name: "http"
      - port: 8080
        name: "cam"

---

apiVersion: v1
kind: Service
metadata:
  name: octoprint
  namespace: static-endpoint-ingress
spec:
  ports:
  - name: octoprint
    protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 0
  - name: octoprint-cam
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 0
selector: {}

---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: octoprint-cam
#   namespace: static-endpoint-ingress
# spec:
#   ingressClassName: nginx
#   tls:
#   - secretName: letsencrypt-wildcard-cert-prod
#     hosts:
#     - &host octoprint-cam.${CLUSTER_DOMAIN}
#   rules:
#   - host: *host
#     http:
#       paths:
#       - pathType: Prefix
#         path: /
#         backend:
#           service:
#             name: octoprint
#             port:
#               number: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint
  namespace: static-endpoint-ingress
  annotations:
    nginx.org/websocket-services: octoprint
    nginx.ingress.kubernetes.io/websocket-services: octoprint
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: 0
    nginx.org/client-max-body-size: 0
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host $host;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Real-IP $remote_addr;

spec:
  ingressClassName: nginx
  tls:
  - secretName: letsencrypt-wildcard-cert-prod
    hosts:
    - &host octoprint.${CLUSTER_DOMAIN}
  rules:
  - host: *host
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: octoprint
            port:
              number: 5000
