cluster/static-endpoint-ingress/openwrt.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: openwrt
  namespace: static-endpoint-ingress
subsets: 
  - addresses:
      - ip: "10.1.1.2" 
    ports:
      - port: 443 
        name: "http"

---

apiVersion: v1
kind: Service
metadata:
  name: openwrt
  namespace: static-endpoint-ingress
spec:
  ports:
  - name: openwrt
    protocol: TCP
    port: 443
    targetPort: 443
    nodePort: 0
selector: {}
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwrt
  namespace: static-endpoint-ingress
  annotations:
    ingress.kubernetes.io/protocol: https
spec:
  ingressClassName: nginx
  tls:
  - secretName: letsencrypt-wildcard-cert-prod
    hosts:
    - &host openwrt.${CLUSTER_DOMAIN}
  rules:
  - host: *host
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: openwrt
            port:
              number: 443
