cluster/static-endpoint-ingress/uptime-kuma.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: uptime-kuma
  namespace: static-endpoint-ingress
subsets: 
  - addresses:
      - ip: ${UPTIME_KUMA_HOST} 
    ports:
      - port: ${UPTIME_KUMA_PORT}
        name: "http"

---

apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: static-endpoint-ingress
spec:
  ports:
  - name: http
    protocol: TCP
    port: ${UPTIME_KUMA_PORT}
    targetPort: ${UPTIME_KUMA_PORT}
    nodePort: 0
selector: {}
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: static-endpoint-ingress
spec:
  ingressClassName: nginx
  tls:
  - secretName: letsencrypt-wildcard-cert-prod
    hosts:
    - &host uptime-kuma.${CLUSTER_DOMAIN}
  rules:
  - host: *host
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: uptime-kuma
            port:
              number: ${UPTIME_KUMA_PORT}
